--- a/Changes
+++ b/Changes
@@ -1,12 +1,26 @@
 Revision history for Perl extension Crypt::Lite.
 
-0.82.04  Wed Apr 13 16:20:46 2005
-	- Added / fixed make test code
+0.82.07  16.09.2006 15:27
 
-0.82.05  Wed Apr 14 00:58:00 2005
-	- Updated comment
+	 - There was a severe security bug in the encryption procedure in all
+	   earlier releases. To include the private key was a bad idea.
+	   It's being improved for the little price there is an additional
+	   dependency to the MD5 Perl module from now on.
+
+	 - Updated documentation part about double encryption.
+
+	 - Strings encrypted with earlier versions can still be decrypted
+	   with this release and the new procedure will apply as of the next
+	   encryption call.
+
 
 0.82.06  Thu Sep 29 10:33:00 2005
-	- A comment has shown it needs at least version 5.6.1
-	  of Perl and the Makefile.PL has been updated
-	  accordingly
+
+	 - A comment has shown it needs at least version 5.6.1
+	   of Perl and the Makefile.PL has been updated
+	   accordingly.
+
+
+0.82.05  Wed Apr 14 00:58:00 2005
+
+	 - Updated comment.
