Import of RETOH/Crypt-Lite-0.82.09 from CPAN.
gitpan-cpan-distribution: Crypt-Lite
gitpan-cpan-version:      0.82.09
gitpan-cpan-path:         RETOH/Crypt-Lite-0.82.09.tar.gz
gitpan-cpan-author:       RETOH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Crypt::Lite.
 
-0.82.08  16.09.2006 15:27
+0.82.09  16.09.2006 15:27
 
 	 - There was a severe security bug in the encryption procedure in all
 	   earlier releases. To include the private key was a bad idea.
@@ -9,18 +9,20 @@ Revision history for Perl extension Crypt::Lite.
 
 	 - Updated documentation part about double encryption.
 
+	 - Portability issue on Win32 systems addressed
+
 	 - Strings encrypted with earlier versions can still be decrypted
 	   with this release and the new procedure will apply as of the next
 	   encryption call.
 
 
-0.82.06  Thu Sep 29 10:33:00 2005
+0.82.06  29.09.2005 10:33
 
 	 - A comment has shown it needs at least version 5.6.1
 	   of Perl and the Makefile.PL has been updated
 	   accordingly.
 
 
-0.82.05  Wed Apr 14 00:58:00 2005
+0.82.05  14.04.2005 00:58
 
 	 - Updated comment.
